--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@kinde-oss/kinde-auth-nextjs": "^2.3.10",
-    "@types/node": "20.11.5",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
+    "@kinde-oss/kinde-auth-nextjs": "^2.5.3",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
-    "next": "14.1.0",
+    "eslint-config-next": "^15.2.2",
+    "next": "^15.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.3.3"
+    "typescript": "^5.8.2"
   }
 }
